--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,29 +2,40 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Python application test with GitHub Actions
-on: [push]
+on:
+  push:
+    branches: ["main", "release/v*"]
+  pull_request:
+    branches: ['main', 'release/v*']
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+    - name: Check code out from github and into "ubuntu-latest" (or our environment)
+      uses: actions/checkout@v4
+
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: "3.12"
+
     - name: Install dependencies
       run: |
         make install
         python -m textblob.download_corpora
+
     - name: Lint with pylint
       run: |
         make lint
+
     - name: Test with pytest
       run: |
         make test
+
     - name: Format code
       run: |
         make format
+
     - name: Build Containers
       run: |
         make build
